Adaptation estimate + correction about align-items: center

--- a/src/components/tabs/_tabs.sass
+++ b/src/components/tabs/_tabs.sass
@@ -75,13 +75,13 @@
 			max-width: 530px
 
 	&__content-item
+		display: flex
+		align-items: flex-start
 		@media screen and ( max-width: 1220px )
 			flex-direction: column
 			align-items: center
 
 .tab1
-	display: flex
-	align-items: flex-start
 
 	&__title
 		@media screen and ( max-width: 1220px )
@@ -112,7 +112,6 @@
 			margin-bottom: 0
 
 .tab2
-	display: flex
 	justify-content: space-between
 	max-width: 640px
 	width: 100%
@@ -140,7 +139,6 @@
 		margin-bottom: 20px
 
 .tab3
-	display: flex
 	flex-direction: column
 	align-items: flex-start
 
